--- a/Day-02_Jenkins-Agent-Setup-Using-Docker-Compose/compose.yaml
+++ b/Day-02_Jenkins-Agent-Setup-Using-Docker-Compose/compose.yaml
@@ -10,6 +10,7 @@ services:
     ports:
       - "2020:22"
     environment:
+      - JENKINS_AGENT_SSH_PUBKEY=${JENKINS_AGENT_SSH_PUBLIC_KEY}
       - DOCKER_HOST=unix:///var/run/docker.sock
       - TZ=UTC
     volumes:
