--- a/Day-04_Jenkins-tools-setup/jenkinsfile
+++ b/Day-04_Jenkins-tools-setup/jenkinsfile
@@ -1,5 +1,10 @@
 pipeline {
     agent { label 'sg' }
+    // Global tools used in pipeline
+    // tools {
+    //     maven 'Maven'     // Jenkins Maven tool name (configure in Global Tools)
+    //     gradle 'Gradle'   // Jenkins Gradle tool name (configure in Global Tools)
+    // }
     environment {
         // Tool paths
         JAVA_HOME       = "/tools/java"
